# notebook-2018

./: interesting-stuff.md  open_source_projects_i_am_interested_in_contributing_to.md
2018/: 20180102.md  20180104.md  20180106.md  20180108.md  20180109.md  20180110.md  20180115.md  20180122.md  20180125.md  20180131.md  20180203.md  20180205.md  20180206.md  20180221.md  20180307.md  20180308.md  20180310.md  20180312.md  20180313.md  20180315.md  20180319.md  20180320.md  20180322.md  20180325.md  20180401.md  20180402.md  20180404.md  20180407.md  20180408.md  20180409.md  20180410.md  20180411.md  20180415.md  20180419.md  20180506.md  20180507.md  20180523.md  20180613.md  20180614.md  20180616.md  (+39 more)
cycle-js-introduction/: package-lock.json  package.json
ec2-hello-world/: Dockerfile  example.html  example.js  index.js  package-lock.json  package.json
foo/: package.yaml
fully-connected/: README.md  fully-connected.cabal
haskell-book/: c3.hs  (+28 more)
haskell-book-exercises/: BadMonad.hs  c18.hs  c19.hs  haskell-book-exercises.cabal
haskell-book-exercises/.stack-work/install/x86_64-linux/lts-12.10/8.4.3/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  ListLike-4.6-4gatYePZFyM8L0F1W2EXrC  QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  StateVar-1.1.1.1-2gGpwJVklFHH8BWAIzM8br  aeson-1.3.1.1-7JlrwYHW7OR9ca4RRZ9oOf  ansi-terminal-0.8.1-DTnXTZHQH9cDx7RXC7iISb  appar-0.1.4-J5mdtVuytVIKFPXD2MXW4E  asn1-encoding-0.9.5-Hda5eFYrxaAEKZneEN8y3K  asn1-parse-0.9.4-D9jOhISviJM4GiEEebNDYp  asn1-types-0.3.2-tJLo79AEtt2QA3k2KhOj9  async-2.2.1-7DQr5PBcpiwJNOuf7ZiSPa  attoparsec-0.13.2.2-xg7oGz89op5ikSiTsOvab  auto-update-0.1.4-7k5Okr80TfS9UGlvnbDZr0  base-compat-0.10.4-9FtFg9E90S5CFRyvxjUaaZ  base-orphans-0.7-85wcea2rRmdArILlfYz5fz  basement-0.0.8-8QjArDsw3GWCcbHE5iqtz3  bifunctors-5.5.3-3CFtXwCijDKKK9TQJ6SU4j  blaze-builder-0.4.1.0-Gz7BwSYlOrTDOutVN7e028  bsb-http-chunked-0.0.0.3-4RkMfpxUxjM3gl2uKcPx0I  byteable-0.1.1-APABKKN6nDlC3QxQBw4YlY  byteorder-1.0.4-JGHrMy8StI888DOmmSVbRy  bytestring-builder-0.10.8.1.0-79xKWk2yKAy2kdzRqfwsUV  cabal-doctest-1.0.6-E57gwmEN5fa2uY0bq8bb44  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  case-insensitive-1.2.0.11-LO6zJz9aRiEEtPUvQyaZDw  cereal-0.5.7.0-ILaYAmVTyR1IcEsGXXUCfI  checkers-0.4.11-2TsUe0p7bIxKpI0U5r1flf  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  cmdargs-0.10.20-F07nW8QLYyL7Sb2sj6I5zi  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  comonad-5.0.4-2cIAoyC7LmrBWVDzZZD19g  conduit-1.3.0.3-8Y7sfmWiTeNBwHOK5PlqO7  conduit-extra-1.3.0-BP8ing9j5V527Eu3KQi4tc  connection-0.2.8-8KO8FGPgVsnGhCNIhpnZt8  contravariant-1.4.1-2mEQrbi456985xgSkxMwxj  cookie-0.4.4-J7voMT3UqhIHsi2WXOCT1n  cpphs-1.20.8-KvqJc32txJLH1Pcj2muqBd  cryptonite-0.25-GgyZs9E1viv2owjaLxA3vq  data-default-0.7.1.1-HjQKn6Xjs875aCLGpDUtkz  data-default-class-0.1.2.0-2kYzERBLX3wJoPfj7mwVvW  (+89 more)
haskell-book-exercises/.stack-work/install/x86_64-osx/lts-12.10/8.4.3/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  StateVar-1.1.1.1-2gGpwJVklFHH8BWAIzM8br  ansi-terminal-0.8.1-DTnXTZHQH9cDx7RXC7iISb  base-orphans-0.7-85wcea2rRmdArILlfYz5fz  bifunctors-5.5.3-3CFtXwCijDKKK9TQJ6SU4j  cabal-doctest-1.0.6-E57gwmEN5fa2uY0bq8bb44  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  checkers-0.4.11-2TsUe0p7bIxKpI0U5r1flf  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  comonad-5.0.4-2cIAoyC7LmrBWVDzZZD19g  contravariant-1.4.1-2mEQrbi456985xgSkxMwxj  distributive-0.5.3-4U82O12jcn83TVRfsshTrt  hashable-1.2.7.0-8MkquYouWwiLIw3HmVGSkN  haskell-book-exercises-0.1.0.0  hspec-2.5.5-FuOC97NUjg47UG2A5AEwkM  hspec-core-2.5.5-IgfpDVQdTmGjbzfYzu390  hspec-discover-2.5.5-3lbzfYKyCX74uo24qYYO8u  hspec-expectations-0.8.2-7lpBAWb1yuYLnEELJ6wtYs  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  quickcheck-io-0.2.0-EkaMZi89NOa4JiMdRU98Zc  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  semigroupoids-5.2.2-GQcE8Wke9iQLrcXixPm8Hb  semigroups-0.18.5-E4FVMc5VZAG98u64romz5  setenv-0.1.1.3-H1xmIqlPy4yIDquO6eJhBl  stm-2.4.5.1-1n1oRyz2WxkGi5pMiXlR3y  tagged-0.8.5-4K9kIYSwDGR863J7NMxdyP  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ  th-abstraction-0.2.8.0-Ct896m4STpK8GA15Cl5y88  transformers-compat-0.6.2-9iC4UdBVNZ6EIurBbSdoYK  unordered-containers-0.2.9.0-IkfpzvG0LzrHAbTzfMidvY
haskell-book-exercises/src/: ApplicativeLaws.hs  C10A.hs  C11A.hs  C12A.hs  C14A.hs  C14B.hs  C16.hs  C16A.hs  C16B.hs  C16C.hs  C16D.hs  C16E.hs  C17.hs  C17A.hs  C17B.hs  C17Scratch.hs  C18A.hs  C18B.hs  C18Exc.hs  C20A.hs  C20B.hs  C21.hs  C21A.hs  C21B.hs  C21C.hs  C22.hs  C22A.hs  C23.hs  C23A.hs  C24.hs  C24A.hs  C24B.hs  C24Backtrack.hs  C25.hs  C25A.hs  C26.hs  C26A.hs  C26B.hs  C3A.hs  C4A.hs  (+20 more)
parser-experiments/: parser-experiments.cabal
parser-experiments/src/: PositiveInteger.hs  Semver.hs
(+64 files in other folders)
