name:                haskell-book-exercises
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell-book-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      ApplicativeLaws
    , ForAll
  other-modules:
      Paths_foo
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable haskell-book-exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , checkers
