name:                haskell-book-exercises
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell-book-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      ApplicativeLaws
    , ForAll
    , C21
    , C22
    , C23
    , C24
    , C25
    , C26
    , SkiFree
    , Comonad
    , ReaderPractice
    , Parsing
    , FractionsParser
    , C24Backtrack
    , ParsingJson
  other-modules:
      Paths_foo
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , hspec
    , QuickCheck
    , checkers
    , random
    , transformers
    , trifecta
    , parsers
    , optparse-applicative
    , raw-strings-qq
    , text
    , containers
    , bytestring
    , attoparsec
    , parsec
    , aeson
  default-language: Haskell2010
