name:                haskell-book-exercises
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell-book-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      ApplicativeLaws
    , BadMonad
    , C10A
    , C11A
    , C12A
    , C14A
    , C14B
    , C16A
    , C16B
    , C16C
    , C16D
    , C16E
    , C17A
    , C17B
    , C18A
    , C18B
    , C20A
    , C20B
    , C21A
    , C21B
    , C21C
    , C22A
    , C23A
    , C24A
    , C24B
    , C25A
    , C26A
    , C26B
    , C3A
    , C4A
    , C5A
    , C6A
    , C6B
    , C7A
    , C8A
    , C9A
    , C9B
    , C9C
    , CipherA
    , CipherB
    , Comonad
    , Database
    , ForAll
    , FractionsParser
    , Laws
    , Mathh
    , NonZero
    , Parsing
    , ParsingJson
    , ReaderPractice
    , SkiFree
  other-modules:
      Paths_foo
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , hspec
    , QuickCheck
    , checkers
    , random
    , transformers
    , trifecta
    , parsers
    , optparse-applicative
    , raw-strings-qq
    , text
    , containers
    , bytestring
    , attoparsec
    , parsec
    , aeson
    , wreq
    , time
  default-language: Haskell2010
